fix pseudo element overlapping the content

--- a/resources/sass/styles/_what_we_do.scss
+++ b/resources/sass/styles/_what_we_do.scss
@@ -1,5 +1,5 @@
 #what-we-do {
-    margin: 10% 0% 20% 0%;
+    margin: 10% 0% 25% 0%;
 
     .services {
         padding: 2rem 5rem 2rem 0rem;
